--- a/config.yaml
+++ b/config.yaml
@@ -60,7 +60,6 @@ sniffer:
     - dlg.io.mi.com
     - geosite:private
 
-
 #hosts:
 # '*.mihomo.dev': 127.0.0.1
 # '.dev': 127.0.0.1
@@ -83,7 +82,6 @@ dns:
     # fakeip-filter 为 rule-providers 中的名为 fakeip-filter 规则订阅，
     # 且 behavior 必须为 domain/classical，当为 classical 时仅会生效域名类规则
     - rule-set:ProxyLite
-
 
   # use-hosts: true # 查询 hosts
 
@@ -121,15 +119,15 @@ proxies:
       short-id: ""
     client-fingerprint: chrome
 
-FilterHK: &FilterHK '^(?=.*(香港|HK|Hong|🇭🇰))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
-FilterJP: &FilterJP '^(?=.*(日本|JP|Japan|🇯🇵))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
-FilterKR: &FilterKR '^(?=.*(韩国|韓|KR|Korea|🇰🇷))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
-FilterSG: &FilterSG '^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
-FilterUS: &FilterUS '^(?=.*(美国|US|United States|America|🇺🇸))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
-FilterUK: &FilterUK '^(?=.*(英国|UK|United Kingdom|🇬🇧))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
-FilterFR: &FilterFR '^(?=.*(法国|FR|France|🇫🇷))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
-FilterDE: &FilterDE '^(?=.*(德国|DE|Germany|🇩🇪))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
-FilterTW: &FilterTW '^(?=.*(台湾|TW|Taiwan|Wan|🇹🇼))(?!(.*(Reality|机场|每月|剩余|订阅))).*$'
+FilterHK: &FilterHK "^(?=.*(香港|HK|Hong|🇭🇰))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
+FilterJP: &FilterJP "^(?=.*(日本|JP|Japan|🇯🇵))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
+FilterKR: &FilterKR "^(?=.*(韩国|韓|KR|Korea|🇰🇷))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
+FilterSG: &FilterSG "^(?=.*(新加坡|狮城|SG|Singapore|🇸🇬))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
+FilterUS: &FilterUS "^(?=.*(美国|US|United States|America|🇺🇸))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
+FilterUK: &FilterUK "^(?=.*(英国|UK|United Kingdom|🇬🇧))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
+FilterFR: &FilterFR "^(?=.*(法国|FR|France|🇫🇷))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
+FilterDE: &FilterDE "^(?=.*(德国|DE|Germany|🇩🇪))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
+FilterTW: &FilterTW "^(?=.*(台湾|TW|Taiwan|Wan|🇹🇼))(?!(.*(Reality|机场|每月|剩余|订阅))).*$"
 FilterAll: &FilterAll '^(?=.*(.))(?!(.*((?i)机场|每月|剩余|订阅|(\b(TOTAL|EXPIRE|EMAIL|Panel|Channel|Author)\b|(\d{4}-\d{2}-\d{2}|\d+G))))).*$'
 
 AutoProviders: &AutoProviders
@@ -201,8 +199,8 @@ NodeParam: &NodeParam
   size-limit: 0
   header:
     User-Agent:
-    - "mihomo/1.19.0"
-    - "Clash/v1.18.0"
+      - "mihomo/1.19.0"
+      - "Clash/v1.18.0"
   health-check:
     enable: true
     interval: 600
@@ -300,6 +298,9 @@ rule-providers:
   Google:
     <<: *RuleSet_classical_yaml
     url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google_No_Resolve.yaml
+  GoogleFCM:
+    <<: *RuleSet_classical_yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GoogleFCM/GoogleFCM_No_Resolve.yaml
   Global:
     <<: *RuleSet_classical_yaml
     url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml
@@ -317,15 +318,15 @@ rule-providers:
     url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft_No_Resolve.yaml
 
   ## 自定义规则
-#  CustomDirect:
-#    <<: *RuleSet_classical_yaml
-#    url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/DIRECT/DIRECT_No_Resolve.yaml
-#  CustomProxy:
-#    <<: *RuleSet_classical_yaml
-#    url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/PROXY/PROXY_No_Resolve.yaml
-
+  CustomDirect:
+    <<: *RuleSet_classical_yaml
+    url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/DIRECT/DIRECT_No_Resolve.yaml
+  CustomProxy:
+    <<: *RuleSet_classical_yaml
+    url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/PROXY/PROXY_No_Resolve.yaml
 
 rules:
+  - AND,((NETWORK,UDP),(DST-PORT,443)),REJECT
   - RULE-SET,CustomDirect,DIRECT
   - RULE-SET,CustomProxy,PROXY
 
@@ -358,27 +359,29 @@ rules:
   - RULE-SET,Microsoft,PROXY
 
   - GEOSITE,google@cn,DIRECT
+  - RULE-SET,GoogleFCM,PROXY
   - RULE-SET,Google,PROXY
   - GEOSITE,youtube,流媒体
   - GEOSITE,twitter,PROXY
   - GEOSITE,pixiv,PROXY
-  - GEOSITE,category-scholar-!cn,PROXY
-  - GEOSITE,apple-cn,DIRECT
+  - GEOSITE,apple@cn,DIRECT
   - RULE-SET,GlobalMedia,流媒体
 
   - RULE-SET,Ai,AI
   - RULE-SET,Speedtest,测速
+  - RULE-SET,TikTok,PROXY
 
   - GEOSITE,tld-cn,DIRECT
   - GEOSITE,steam@cn,DIRECT
   - GEOSITE,category-games@cn,DIRECT
-  - RULE-SET,Game,PROXY
+  - GEOSITE,category-games,游戏平台
+  - RULE-SET,Game,游戏平台
 
-  - GEOSITE,CN,DIRECT
-  - GEOIP,CN,DIRECT,no-resolve
-  - RULE-SET,TikTok,PROXY
+  - GEOSITE,cn,DIRECT
+  - GEOIP,cn,DIRECT,no-resolve
+
+  - GEOSITE,category-porn,PROXY
   - RULE-SET,Global,PROXY
-  - AND,((NETWORK,UDP),(DST-PORT,443)),REJECT # QUIC
   - NETWORK,udp,DIRECT
-  ### 未匹配
+
   - MATCH,PROXY
