--- a/PROXY/PROXY_No_Resolve.yaml
+++ b/PROXY/PROXY_No_Resolve.yaml
@@ -1,14 +1,14 @@
 payload:
-  # DNS
-  - DOMAIN,one.one.one.one
-  - DOMAIN-SUFFIX,cloudflare-dns.com
-  - DOMAIN-SUFFIX,dns.google
-  # google
-  - DOMAIN-SUFFIX,gstatic.com
-  - DOMAIN-SUFFIX,googleapis.cn
-  #
-  - DOMAIN-SUFFIX,nodeseek.com
-
-  - DOMAIN-SUFFIX,javdb.com
-  - DOMAIN-SUFFIX,javbus.com
-  - DOMAIN-SUFFIX,missav.ws
+# DNS
+- DOMAIN,one.one.one.one
+- DOMAIN-SUFFIX,cloudflare-dns.com
+- DOMAIN-SUFFIX,dns.google
+# google
+- DOMAIN-SUFFIX,gstatic.com
+- DOMAIN-SUFFIX,googleapis.cn
+# 自定义
+- DOMAIN-SUFFIX,nodeseek.com
+- DOMAIN-SUFFIX,v2ex.com
+- DOMAIN-SUFFIX,javdb.com
+- DOMAIN-SUFFIX,javbus.com
+- DOMAIN-SUFFIX,missav.ws
