--- a/config.yaml
+++ b/config.yaml
@@ -102,8 +102,7 @@ FilterAll: &FilterAll '^(?=.*(.))(?!(.*((?i)机场|每月|剩余|订阅|(\b(TOTA
 AutoProviders: &AutoProviders
   type: url-test
   url: https://www.gstatic.com/generate_204
-  interval: 60
-  tolerance: 200
+  tolerance: 100
   lazy: true
   include-all-providers: true
 SelectProviders: &SelectProviders
@@ -115,72 +114,62 @@ SelectProxies: &SelectProxies
 
 # 代理组
 proxy-groups:
-  - name: HK-自动选择
+  - name: 🇭🇰自动选择
     <<: *AutoProviders
     filter: *FilterHK
-  - name: US-自动选择
+  - name: 🇺🇸自动选择
     <<: *AutoProviders
     filter: *FilterUS
-  - name: JP-自动选择
+  - name: 🇯🇵自动选择
     <<: *AutoProviders
     filter: *FilterJP
-  - name: SG-自动选择
+  - name: 🇸🇬自动选择
     <<: *AutoProviders
     filter: *FilterSG
-  - name: AI
+  - name: 🤖AI
     <<: *SelectProxies
     proxies:
       - DIRECT
-      - HK-自动选择
-      - US-自动选择
-      - JP-自动选择
-      - SG-自动选择
-  - name: 测速
+      - 🇭🇰自动选择
+      - 🇯🇵自动选择
+      - 🇸🇬自动选择
+      - 🇺🇸自动选择
+  - name: 📈测速
     <<: *SelectProxies
     proxies:
       - DIRECT
-      - HK-自动选择
-      - US-自动选择
-      - JP-自动选择
-      - SG-自动选择
-  - name: 流媒体
+      - 🇭🇰自动选择
+      - 🇯🇵自动选择
+      - 🇸🇬自动选择
+      - 🇺🇸自动选择
+  - name: 🎬流媒体
     <<: *SelectProxies
     proxies:
       - DIRECT
-      - HK-自动选择
-      - US-自动选择
-      - JP-自动选择
-      - SG-自动选择
-  - name: 游戏平台
+      - 🇭🇰自动选择
+      - 🇯🇵自动选择
+      - 🇸🇬自动选择
+      - 🇺🇸自动选择
+  - name: 🎯代理
     <<: *SelectProxies
     proxies:
       - DIRECT
-      - HK-自动选择
-      - US-自动选择
-      - JP-自动选择
-      - SG-自动选择
-  - name: PROXY
-    <<: *SelectProxies
-    proxies:
-      - DIRECT
-      - HK-自动选择
-      - US-自动选择
-      - JP-自动选择
-      - SG-自动选择
+      - 🇭🇰自动选择
+      - 🇯🇵自动选择
+      - 🇸🇬自动选择
+      - 🇺🇸自动选择
 
 # 订阅配置
 NodeParam: &NodeParam
   type: http
   interval: 86400
   proxy: DIRECT
-  size-limit: 0
   header:
     User-Agent:
-      - mihomo/1.19.0
-      - Clash/v1.18.0
+      - 'mihomo/1.19.0'
+      - 'Clash/v1.18.0'
   health-check:
     enable: true
-    interval: 600
     lazy: true
     url: https://www.gstatic.com/generate_204
   override:
@@ -229,12 +218,6 @@ rule-providers:
     <<: *RuleSet_domain_text
     url: https://ruleset.skk.moe/Clash/domainset/speedtest.txt
   ## https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Clash
-  Tencent:
-    <<: *RuleSet_classical_yaml
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Tencent/Tencent_No_Resolve.yaml
-  WeChat:
-    <<: *RuleSet_classical_yaml
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/WeChat/WeChat_No_Resolve.yaml
   GlobalMedia:
     <<: *RuleSet_classical_yaml
     url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical_No_Resolve.yaml
@@ -250,38 +233,41 @@ rule-providers:
     url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/PROXY/PROXY_No_Resolve.yaml
 
 rules:
+  - GEOSITE,private,DIRECT
+  - GEOIP,private,DIRECT,no-resolve
   - AND,((NETWORK,UDP),(DST-PORT,443)),REJECT
   - NETWORK,udp,DIRECT
   - GEOSITE,category-httpdns-cn@ads,REJECT
   - RULE-SET,CustomDirect,DIRECT
-  - RULE-SET,CustomProxy,PROXY
-  - GEOSITE,private,DIRECT
-  - GEOIP,private,DIRECT,no-resolve
+  - RULE-SET,CustomProxy,🎯代理
   - GEOSITE,category-ntp-cn,DIRECT
+  - GEOSITE,alibaba,DIRECT
+  - GEOSITE,tencent,DIRECT
   - GEOSITE,jsdelivr,DIRECT
   - GEOSITE,tracker,DIRECT
-  - GEOSITE,category-ai-!cn,AI
-  - GEOSITE,category-container,PROXY
+  - GEOSITE,category-ai-!cn,🤖AI
+  - GEOSITE,category-container,🎯代理
+  - GEOSITE,cloudflare,🎯代理
+  - GEOIP,cloudflare,🎯代理,no-resolve
+  - RULE-SET,Speedtest,📈测速
   - GEOSITE,apple@cn,DIRECT
-  - GEOSITE,github,PROXY
+  - GEOSITE,github,🎯代理
   - GEOSITE,microsoft@cn,DIRECT
-  - GEOSITE,microsoft,PROXY
-  - GEOSITE,pixiv,PROXY
-  - GEOSITE,telegram,PROXY
-  - GEOIP,telegram,PROXY,no-resolve
-  - GEOSITE,category-porn,流媒体
-  - RULE-SET,GlobalMedia,流媒体
+  - GEOSITE,microsoft,🎯代理
+  - GEOSITE,telegram,🎯代理
+  - GEOIP,telegram,🎯代理,no-resolve
+  - GEOSITE,category-porn,🎬流媒体
+  - RULE-SET,GlobalMedia,🎬流媒体
   - GEOSITE,google@cn,DIRECT
-  - GEOSITE,google,PROXY
-  - GEOIP,google,PROXY,no-resolve
-  - RULE-SET,Speedtest,测速
+  - GEOSITE,google,🎯代理
+  - GEOIP,google,🎯代理,no-resolve
   - GEOSITE,category-game-accelerator-cn,DIRECT
   - GEOSITE,tld-cn,DIRECT
   - GEOSITE,category-games@cn,DIRECT
   - GEOSITE,category-games,游戏平台
   - GEOSITE,cn,DIRECT
   - GEOIP,cn,DIRECT,no-resolve
-  - MATCH,PROXY
+  - MATCH,🎯代理
 
 # DNS 配置
 dns:
@@ -296,7 +282,6 @@ dns:
   fake-ip-filter:
     # fakeip-filter 为 rule-providers 中的名为 fakeip-filter 规则订阅，
     # 且 behavior 必须为 domain/classical，当为 classical 时仅会生效域名类规则
-    - rule-set:CustomProxy
     - rule-set:Global
   # use-hosts: true # 查询 hosts
   # 配置后面的nameserver、fallback和nameserver-policy向dns服务器的连接过程是否遵守遵守rules规则
