--- a/config.yaml
+++ b/config.yaml
@@ -23,17 +23,17 @@ global-ua: clash.meta
 # keep-alive-interval: 15
 #自定义 geodata url
 geox-url:
-  geoip: https://cdn.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat
-  geosite: https://cdn.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat
-  mmdb: https://cdn.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.metadb
-  asn: https://cdn.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/GeoLite2-ASN.mmdb
+  geoip: https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat
+  geosite: https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat
+  mmdb: https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.metadb
+  asn: https://fastly.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/GeoLite2-ASN.mmdb
 geodata-loader: standard #standard：标准加载器 memconservative：专为内存受限 (小内存) 设备优化的加载器 (默认值)
 geo-auto-update: true # 是否自动更新 geodata
 geo-update-interval: 72 # 更新间隔，单位：小时
 
 # Tun 配置
 tun:
-  enable: false
+  enable: true
   stack: system # gvisor/mixed
   dns-hijack:
     - any:53
@@ -228,23 +228,21 @@ rule-providers:
   ## https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Clash
   GlobalMedia:
     <<: *RuleSet_classical_yaml
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical_No_Resolve.yaml
+    url: https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical_No_Resolve.yaml
   Global:
     <<: *RuleSet_classical_yaml
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml
+    url: https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml
   ## 自定义规则
   CustomDirect:
     <<: *RuleSet_classical_yaml
-    url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/DIRECT/DIRECT_No_Resolve.yaml
+    url: https://fastly.jsdelivr.net/gh/alienven/clash-rules@main/DIRECT/DIRECT_No_Resolve.yaml
   CustomProxy:
     <<: *RuleSet_classical_yaml
-    url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/PROXY/PROXY_No_Resolve.yaml
+    url: https://fastly.jsdelivr.net/gh/alienven/clash-rules@main/PROXY/PROXY_No_Resolve.yaml
 
 rules:
   - GEOSITE,private,DIRECT
   - GEOIP,private,DIRECT,no-resolve
-  - AND,((NETWORK,UDP),(DST-PORT,443)),REJECT
-  - NETWORK,udp,DIRECT
   - GEOSITE,category-httpdns-cn@ads,REJECT
   - RULE-SET,CustomDirect,DIRECT
   - RULE-SET,CustomProxy,🎯代理
