--- a/config.yaml
+++ b/config.yaml
@@ -217,17 +217,17 @@ rule-providers:
   ## https://github.com/blackmatrix7/ios_rule_script/tree/master/rule/Clash
   GlobalMedia:
     <<: *RuleSet_classical_yaml
-    url: https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical_No_Resolve.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical_No_Resolve.yaml
   Global:
     <<: *RuleSet_classical_yaml
-    url: https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global_Classical_No_Resolve.yaml
   ## 自定义规则
   CustomDirect:
     <<: *RuleSet_classical_yaml
-    url: https://fastly.jsdelivr.net/gh/alienven/clash-rules@main/DIRECT/DIRECT_No_Resolve.yaml
+    url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/DIRECT/DIRECT_No_Resolve.yaml
   CustomProxy:
     <<: *RuleSet_classical_yaml
-    url: https://fastly.jsdelivr.net/gh/alienven/clash-rules@main/PROXY/PROXY_No_Resolve.yaml
+    url: https://cdn.jsdelivr.net/gh/alienven/clash-rules@main/PROXY/PROXY_No_Resolve.yaml
 
 rules:
   - GEOSITE,private,DIRECT
